
DROP TABLE IF EXISTS customers CASCADE;
DROP TABLE IF EXISTS proposals CASCADE;
DROP TABLE IF EXISTS reservations CASCADE;

-- Customer data
CREATE TABLE customers (
    customer_id     INT  generated by default as identity,
    email_address   varchar(255 ) not null,
    fname           varchar(64 ) not null,
    mname           varchar(64 ) not null,
    lname           varchar(64 ) not null,
    phone           varchar(10) not null,
    PRIMARY   KEY(customer_id)
);

-- Assume that package id is obtained from some external service
-- Pax can be a separate table
CREATE TABLE proposals (
    proposal_id     INT  generated by default as identity,
    customer_id     INT not null,
    package_id      varchar(64) not null,
    pax_0           varchar(64) not null,
    pax_age_0       INT  not null,
    pax_1           varchar(64),
    pax_age_1       INT,
    pax_2           varchar(64),
    pax_age_2       INT,
    pax_3           varchar(64),
    pax_age_3       INT,
    pax_4           varchar(64),
    pax_age_4       INT,
    PRIMARY   KEY(proposal_id) ,
    CONSTRAINT fk_customer
        FOREIGN KEY(customer_id)
            REFERENCES customers(customer_id)
);

-- Assume that reservation details are in another system
-- and may be obtained with reservation_ref
CREATE TABLE reservations (
    reservation_id      INT  generated by default as identity,
    proposal_id         INT not null,
    reservation_ref     varchar(255) not null,
    reservation_type    varchar(10) not null,
    status              varchar(10) not null,
    PRIMARY   KEY(proposal_id, reservation_id),
    CONSTRAINT fk_proposal
        FOREIGN KEY(proposal_id)
            REFERENCES proposals(proposal_id)
);
