@startuml


'Uncomment the following to check out the detailed view
'!include customer.class.puml
'!include vacationpackage.class.puml



package com.acme.sales.model {

    class Proposal <<Entity>> {
     + int : reference

     + int : customerReferenceNumber

     + VacationPackage: vacationPackage

     + ArrayList : Pax

     + ArrayList : reservations

     + boolean generateBookingConfirmation()
    }

    note top of Proposal : Proposal is an Entity that holds all of the information needed for booking the vacation.
    note right of Proposal::"reference"
            Uniquely identifies a proposal instance
    end note

    note left of Proposal::"reservations"
                List of reservation objects
                Agent will setup these as per customer preferences
                E.g., dates of stay, flights ..
        end note

    enum  ProposalStatus {
            ACCEPTED,
            REJECTED,
            ON_HOLD,
            AWAITING_CONFIRMATION,
            EXPIRED,
            UNKNOWN
       }

    class Customer <<Entity>> {
    }
    note bottom of Customer : Independent lifecycle i.e., not managed by Proposal

    class VacationPackage <<Entity>> {

    }
    note bottom of VacationPackage : Independent lifecycle i.e., not managed by Proposal

    'Cannot exist on its own
    class Pax <<Value Object>> {
    }
    note bottom of Pax : Managed as part of the Proposal; no unique identity

    class Offer <<Value Object>> {
     - String: reference
    }
          note bottom of Offer : Applied as discounts

}
package com.acme.sales.model.booking {
	class Reservation <<Value Object>> {
	}
}
note bottom of Reservation : Managed as part of the Proposal; no unique identity


Proposal "1" o-- "1" VacationPackage : references

'Composition as Customer can exist on its own
Proposal o--  Customer : references

'Entity-Value relationship - Pax can't exist w/o proposal
Proposal "1" *-- "*" Pax  : has

Proposal "0" *-- "2" Offer
Proposal -- ProposalStatus : defines

'Has 1 or more reservations
Proposal "1" *-- "*" Reservation  : has



title Proposal Class \n\n
footer \n\n\n\n Part of a course on Microservices \n Copyright @ 2021. For more info visit http://ACloudFan.com \n


@enduml
